# FaceBoxes_VS2015_Python

./: CMakeLists.txt  README.md
cmake/: Cuda.cmake  Dependencies.cmake  ProtoBuf.cmake  Targets.cmake  WindowsDownloadPrebuiltDependencies.cmake  lint.cmake
models/faceboxes/: faceboxes.caffemodel
python/: CMakeLists.txt
python/caffe/: _caffe.cpp
scripts/: build_win_python35_vs2015.cmd
src/caffe/: CMakeLists.txt  common.cpp
src/caffe/layers/: detection_output_layer.cpp  detection_output_layer.cu
test/: fd_pycaffe.py
tools/: CMakeLists.txt
